# quadratic_surface

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  volrend.code-workspace
cmake/: shader_inl.cmake
include/volrend/: camera.hpp  data_format.hpp  human.hpp  marching_cubes.hpp  mesh.hpp  msh_ply.hpp  n3tree.hpp  quadric.hpp  quadrics.hpp  render_options.hpp  renderer.hpp  thread_pool.hpp  tinylogger.hpp
include/volrend/cuda/: rt_core.cuh
include/volrend/internal/: data_spec.hpp  n3tree_query.hpp  opts.hpp  shader.hpp
shaders/: rt.frag
src/: camera.cpp  human.cpp  marching_cubes.cpp  mesh.cpp  n3tree.cpp  opts.cpp  quadrics.cpp  shader_renderer.cpp  thread_pool.cpp
src/cuda/: volrend.cu
